Fix weird spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,89 +1,90 @@
-/*Specify the fonts to use for the site, in the order in which they should be used*/
 $baseFontFamily: Oxygen, FontAwesome, Arial;
 
-/*import google's Oxygen font*/
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
-
-/*import font awesome icon font*/
 @import "font-awesome";
 
-/* ************************************************************************ */
-/* Note: If you import twitter bootstrap above navbar and button tweaks, it */
-/* can cause the tweaks to not load. Be sure bootstrap imports happen below */
-/* this section                                                             */
-/* ************************************************************************ */
+/* *************************************************************************** */
+/* Warning: If you import twitter bootstrap above navbar and button tweaks, it */
+/* can cause the tweaks to not load. Be sure bootstrap imports happen below    */
+/* this section. Add bootstrap AFTER the "safe to add" comment, below.         */
+/* *************************************************************************** */
 
-/*Navbar tweaks 
-$navbarBackground: lightgreen;
-$navbarBackgroundHighlight: green;
-$navbarLinkBackgroundHover: lightgreen;
-$navbarBrandColor: white;
-$navbarLinkColor: white;
-*/
 .navbar.navbar-default {
   background-color: #8fd662;
   border-color: #3fa917;
 }
+
 .navbar.navbar-default .navbar-brand {
-	color: #fffffa;
+  color: #fffffa;
 }
+
 .navbar.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-	color: #dad5d5;
+  color: #dad5d5;
 }
+
 .navbar.navbar-default .navbar-text {
-	color: #fffffa;
+  color: #fffffa;
 }
+
 .navbar.navbar-default .navbar-nav > li > a {
-	color: #fffffa;
+  color: #fffffa;
 }
+
 .navbar.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	color: #dad5d5;
+  color: #dad5d5;
 }
+
 .navbar.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #dad5d5;
-	background-color: #3fa917;
+  color: #dad5d5;
+  background-color: #3fa917;
 }
+
 .navbar.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-	color: #dad5d5;
-	background-color: #3fa917;
+  color: #dad5d5;
+  background-color: #3fa917;
 }
+
 .navbar.navbar-default .navbar-toggle {
-	border-color: #3fa917;
+  border-color: #3fa917;
 }
+
 .navbar.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #3fa917;
+  background-color: #3fa917;
 }
+
 .navbar.navbar-default .navbar-toggle .icon-bar {
-	background-color: #fffffa;
+  background-color: #fffffa;
 }
+
 .navbar.navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-	border-color: #fffffa;
+  border-color: #fffffa;
 }
+
 .navbar.navbar-default .navbar-link {
-	color: #fffffa;
+  color: #fffffa;
 }
+
 .navbar.navbar-default .navbar-link:hover {
-	color: #dad5d5;
+  color: #dad5d5;
 }
 
 @media (max-width: 767px) {
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-		color: #fffffa;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-		color: #dad5d5;
-	}
-	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-		color: #dad5d5;
-		background-color: #3fa917;
-	}
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+  color: #fffffa;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+  color: #dad5d5;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #dad5d5;
+    background-color: #3fa917;
+  }
 }
 
-/*Great big button tweaks 
-$btnPrimaryBackground: #fcfcfc;
-$btnPrimaryBackgroundHighlight: lightgreen;
-*/
+/*Great big button tweaks */
 .btn.btn-success {
     color: #ffffff;
     background-color: #39ac3;
@@ -96,6 +97,7 @@ $btnPrimaryBackgroundHighlight: lightgreen;
     background-image: linear-gradient(to bottom, #90ee90, #90ee90);
     border-color: #62c462 #3E8F3E #3E8F3E;
 }
+
 /*
 *Safe to import twitter bootstrap css
 */
@@ -115,10 +117,10 @@ a:hover{
   text-decoration:underline;
 }
 
-.nav li{  
-  padding-left: 0px; 
-  padding-right: 0px;   
-}  
+.nav li{
+  padding-left: 0px;
+  padding-right: 0px;
+}
 
 .marketing-byline, h1, h2{
   text-align: center;
@@ -138,10 +140,6 @@ a:hover{
   margin-bottom: 0px;
   color: rgb(255, 255, 255);
 }
-
-/* *********************************** */
-/* Safe to import bootstrap below here */
-/* *********************************** */
 
 .hero-unit {
   background: dce8dc;
@@ -230,9 +228,10 @@ USE THIS TO GIVE HERO UNIT AN IMAGE BACKGROUND:
 #footer a{
   color: lightgreen;
 }
+
 #footer a:visited{
   color: #DDD;
-} 
+}
 
 .pins_pagination a, .pins_pagination span{
   padding: 0.2em 0.3em; 
